# inventory-api

./: README.md  files-init.ps1  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  installation.md  reference.md
site/: 404.html  index.html  objects.inv
site/installation/: index.html
site/reference/: index.html
site/search/: search_index.json
src/inventory_api/: __init__.py  main.py  models.py
src/inventory_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/inventory_api/routers/: __init__.py  products.py
src/inventory_api/services/: __init__.py  product_service.py
tests/: test_products_api.py
